<resources>
    <string name="app_name">Weather</string>
    <string name="temperature">Temperature</string>
    <string name="temperature_land">Temperature</string>
    <string name="city">City</string>
    <string name="date">Date</string>
    <string name="themeSettings">White/Dark theme</string>
    <string name="windSpeed">Wind Speed</string>
    <string name="soundSettings">On/Off sound</string>
    <string name="notificationSettings">On/Off notification</string>
    <string name="search">Search</string>
    <string name="input_city">Enter City</string>
    <string name="history_of_search">History of search:</string>
    <string name="meter_per_second">m/s</string>
    <string name="city_founded">The city was found!</string>
    <string name="developer">Develovep</string>
    <string name="title_cities">Cities</string>
    <string name="title_search_city">Search city</string>
    <string name="title_developer">Developer</string>
    <string name="title_settings">Settings</string>
    <string name="developer_name">I am George!</string>
    <string name="weather_description">WeatherDescription</string>
    <string name="icon">Icon</string>
    <string name="error">Error!</string>
    <string name="not_found">not found!</string>
    <string name="search_city">Search city</string>
    <string name="network_problem">Network Problem!</string>
    <string name="title_image">Image</string>
    <string name="title_clear_history">Clear history</string>
    <string name="remove">Remove</string>
    <string name="title_weather">Weather</string>
    <string name="title_sort">sort</string>
    <string name="title_sort_by_city">City</string>
    <string name="title_location">location</string>
    <string name="title_maps">Maps</string>
    <string name="currentPosition">Current position!</string>
    <string name="bad_weather">Bad Weather!</string>
    <string name="mobile_enabled">"Mobile data enabled"</string>
    <string name="wifi_enabled">"Wifi data enabled"</string>
    <string name="internet_not_enabled">"No internet is available"</string>
    <string name="no_internet_connection">"No Internet Connection"</string>
    <string name="title_auth_google">Auth Google</string>

</resources>