<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_search_city"
            android:icon="@drawable/ic_city"
            android:title="@string/title_search_city" />

        <item
            android:id="@+id/navigation_weather"
            android:icon="@drawable/ic_weather"
            android:title="@string/title_weather" />

        <item
            android:id="@+id/navigation_maps"
            android:icon="@drawable/ic_map"
            android:title="@string/title_maps" />

        <item
            android:id="@+id/navigation_developer"
            android:icon="@drawable/ic_developer"
            android:title="@string/title_developer" />

        <item
            android:id="@+id/navigation_settings"
            android:icon="@drawable/ic_setting"
            android:title="@string/title_settings" />
    </group>
</menu>
